--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -16,20 +16,26 @@
     padding: 10px;
     width: 100px;
     display: inline-block;
+    margin-right: 15px;
+    margin: 8px;
 }
 
 .inputAuth {
     padding: 12px;
     margin: 8px 0;
+    width: 200px;
+    height: 40px;
 }
 
 button[type="submit"] {
-    background-color: lightblue;
+    background-color: rgb(4, 197, 4);
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 400px;
+    width: 100%;
+    color: aliceblue;
+    font-weight: bold;
 }
 
 .msgErro {
@@ -37,4 +43,15 @@ button[type="submit"] {
     text-align: center;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+}
+
+.sign-box {
+    width: 50%;
+    margin: auto;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    padding: 40px;
+}
+
+.forms form div {
+    margin: 10px 0;
 }
