--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -48,7 +48,7 @@ button[type="submit"] {
 .sign-box {
     width: 50%;
     margin: auto;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.5rem 1rem var(--bg-menu);
     padding: 40px;
 }
 
