--- a/src/components/template/Header/Header.css
+++ b/src/components/template/Header/Header.css
@@ -2,4 +2,13 @@ header {
     margin-bottom: 30px;
 }
 
+div.logo > img {
+    left: 200px;
+    position: relative;
+}
+
+.title {
+    margin-bottom: 20px
+}
+
 
