--- a/src/components/CRUD/Crud.css
+++ b/src/components/CRUD/Crud.css
@@ -27,13 +27,13 @@ th, td {
 input[type=text] {
     display: inline-block;
     width: 20%;
-    padding: 12px;
+    padding: 10px;
     margin: 8px 0;
 }
 
 input[type=number] {
-    padding: 12px;
-    width: 50px;
+    padding: 10px;
+    width: 80px;
 }
 
 .inclui-container {
@@ -41,6 +41,7 @@ input[type=number] {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    top: 0;
 }
 
 .btnSalvar {
