--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,5 @@
 .formLogin {
     margin: auto;
-    margin-top: 50px;
     width: 400px;
     border-radius: 5px;
     background-color: #f2f2f2;
@@ -54,4 +53,9 @@ button[type="submit"] {
 
 .forms form div {
     margin: 10px 0;
+}
+
+img {
+    left: 30px;
+    position: relative;
 }
