--- a/src/components/template/Menu/Menu.css
+++ b/src/components/template/Menu/Menu.css
@@ -1,26 +1,27 @@
 nav.menu {
-    background-color: var(--bg-menu);;
+    background-color: var(--bg-menu);
     position: absolute;
     top: 0;
     z-index: 10;
-    line-height: 10vh;
+    line-height: 5vh;
     text-align: center;
     width: 100%;
+    overflow: auto;
+    white-space: nowrap;
 }
 
 .menu a{
-    color: rgb(255, 255, 255);
-    font-weight: 400;
-    font-size: 30px;
-    letter-spacing: 2px;
-    transition: all 0.5s ease-in-out;
-    opacity: 0.8;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 15px;
     text-decoration: none;
-    padding: 10px;
-    margin-top: 20px;
-    padding: 10px;
+    font-size: 21px;
+    width: 30%;
+    border-bottom: 3px solid transparent;
 }
 
 .menu a:hover {
-    color: #05ff86;
+    color: #76fdf6;
+    border-bottom: 3px solid #76fdf6;
 }
